--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-static-gzip": "^0.3.0",
-    "ng-redux": "^4.0.1"
+    "lodash": "^4.17.5",
+    "ng-redux": "^4.0.1",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel": "^6.23.0",
